--- a/README.rdoc
+++ b/README.rdoc
@@ -28,6 +28,12 @@ nice_assert_select provides helpers for making the calls more rubyish and more r
 
 It is by no means comprehensive, as it was extracted from a project which only needed this selectors.
 
+== Installing
+
+For Rails 2.1 and on, add this to your +config/environment.rb+:
+
+  config.gem 'technicalpickles-nice_assert_select', :lib => 'nice_assert_select', :source => 'http://gems.github.com'
+
 == COPYRIGHT
 
 Copyright (c) 2009 Josh Nichols. See LICENSE for details.
