--- a/README.rdoc
+++ b/README.rdoc
@@ -30,7 +30,7 @@ It is by no means comprehensive, as it was extracted from a project which only n
 
 == Installing
 
-For Rails 2.1 and on, add this to your +config/environment.rb+:
+For Rails 2.1 and on, add this to your config/environment.rb:
 
   config.gem 'technicalpickles-nice_assert_select', :lib => 'nice_assert_select', :source => 'http://gems.github.com'
 
